--- a/client/src/styles/project.styles.css
+++ b/client/src/styles/project.styles.css
@@ -20,3 +20,8 @@
 }
 
 
+/* Mobile styles */
+@media screen and (max-width: 768px) {
+
+  
+}
